--- a/webapp/views/administration/services.html
+++ b/webapp/views/administration/services.html
@@ -32,7 +32,7 @@
 {% block content %}
 
 <div ng-controller="ServiceListController">
-  <terrama2-box title="title" helper="helperMessage" css="boxCss">
+  <terrama2-box title="i18n.__(title)" helper="helperMessage" css="boxCss">
     <div class="col-md-12">
       <div class="col-md-12">
         <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="MessageBoxService.reset()"></terrama2-alert-box2>
