--- a/webapp/views/login.html
+++ b/webapp/views/login.html
@@ -97,6 +97,6 @@
         <script src="/bower_components/angular/angular.min.js"></script>
         <script src="/bower_components/i18n-node-angular/i18n-node-angular.js"></script>
         <!-- TerraMA² Angular Module -->
-        <script src="/dist/terrama2-webapp.min.js"></script>
+        <script src="/dist/terrama2-webapp.js"></script>
     </body>
 </html>
