--- a/webapp/views/login.html
+++ b/webapp/views/login.html
@@ -55,7 +55,7 @@
 
                 <div class="alert alert-danger" style="display: {[ divDisplay ]}">
                   <a href="#" class="close" data-dismiss="alert" aria-label="close" title="close">×</a>
-                  {[ message ]}
+                  {{ i18n.__('{[ message ]}') }}
                 </div>
 
                 <form action="/login/process" method="post">
