--- a/webapp/views/configuration/provider.html
+++ b/webapp/views/configuration/provider.html
@@ -64,7 +64,7 @@
           <div class="form-group has-feedback" terrama2-show-errors>
             <label>{{ i18n.__("Type") }}:</label>
             <select ng-init="console.log(this)" class="form-control" name="protocol" ng-model="dataProvider.protocol" ng-change="onSchemeChanged(this)" ng-disabled="isEditing" required>
-              <option ng-repeat="item in typeList" value="{{ item.name }}" title="{{ item.description }}">{{ item.name }}</option>
+              <option ng-repeat="item in typeList" value="{{ item.name }}" title="{{ item.description }}">{{ i18n.__(item.name) }}</option>
             </select>
 
             <span class="help-block" ng-show="forms.dataProviderForm.protocol.$dirty && forms.dataProviderForm.protocol.$invalid" ng-class="{'has-error': forms.dataProviderForm.protocol.$invalid}">{{ i18n.__('Data Server protocol is required') }}</span>
