--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -584,7 +584,7 @@
     }
 
     function addGroupStatusIcons(){
-        var spanTeste = '<span> <img src="/images/status/green_icon.svg" style="width: 13px;" alt="User Image"> </span>';
+        var spanTeste = '<span> <img src="" class="status_icon"> </span>';
         $(".parent_li").children('.group-name').append(spanTeste);
     }
 
