--- a/webapp/views/configuration/provider.html
+++ b/webapp/views/configuration/provider.html
@@ -101,8 +101,8 @@
     <!-- /.row -->
 
     <div class="box-footer">
-      <button type="submit" class="btn btn-primary pull-right" ng-click="save();" style="margin-left: 10px;">{{ i18n.__("OK") }}</button>
-      <a ng-href="{{ redirectUrl }}" class="btn btn-primary pull-right" style="margin-left: 10px;">{{ i18n.__("Cancel") }}</a>
+      <button type="submit" class="btn btn-primary pull-right" ng-click="save();" style="margin-left: 10px;">{{ i18n.__("Save") }}</button>
+      <a ng-href="{{ redirectUrl }}" class="btn btn-primary pull-left">{{ i18n.__("Cancel") }}</a>
       <button type="submit" class="btn btn-primary pull-right" ng-click="checkConnection(forms.connectionForm);" style="margin-left: 10px;">{{ i18n.__("Check Connection") }}</button>
     </div>
 
