--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -203,9 +203,7 @@
           <li><a href="javascript::void();" ng-disabled="!ctrl.isValid" data-ng-click="ctrl.isValid && ctrl.save(false);" ng-bind="i18n.__('Save')"></a></li>
         </ul>
       </div>
-      <a href="/configuration/views/" class="btn btn-primary pull-right" style="margin-left: 10px;">
-        <span ng-bind="i18n.__('Cancel')"></span>
-      </a>
+      <a href="/configuration/views/" class="btn btn-primary pull-left"><span ng-bind="i18n.__('Cancel')"></span></a>
     </div>
   </terrama2-box>
   
