--- a/webapp/public/javascripts/angular/data-series/templates/intersection.html
+++ b/webapp/public/javascripts/angular/data-series/templates/intersection.html
@@ -18,7 +18,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">{{ i18n.__('Cancel') }}</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="addDataSeries()">{{ i18n.__('OK') }}</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="addDataSeries()">{{ i18n.__('Add') }}</button>
       </div>
     </div>
   </div>
