--- a/webapp/views/administration/user.html
+++ b/webapp/views/administration/user.html
@@ -126,8 +126,8 @@ TerraMA² {{ i18n.__('User Registration') }}
     <!-- ./row -->
 
     <div class="box-footer">
-      <button type="submit" class="btn btn-primary pull-right" ng-click="save();" style="margin-left: 10px;">{{ i18n.__('OK') }}</button>
-      <a href="{[ redirectUrl ]}" class="btn btn-primary pull-right" style="margin-left: 10px;">{{ i18n.__('Cancel') }}</a>
+      <button type="submit" class="btn btn-primary pull-right" ng-click="save();" style="margin-left: 10px;">{{ i18n.__('Save') }}</button>
+      <a href="{[ redirectUrl ]}" class="btn btn-primary pull-left">{{ i18n.__('Cancel') }}</a>
     </div>
   </terrama2-box>
 </div>
