--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -1,5 +1,7 @@
 {% extends "../base/layout.html" %}
 
+{% set tabActive = "alerts" %}
+
 {% block title %} TerraMA² {{ i18n.__('Alert Registration') }} {% endblock %}
 
 {% block styles %}
@@ -345,9 +347,7 @@
           <li><a href="javascript::void();" ng-disabled="ctrl.isNotValid" data-ng-click="!ctrl.isNotValid && ctrl.save(false);" ng-bind="i18n.__('Save')"></a></li>
         </ul>
       </div>
-      <a href="/configuration/alerts/" class="btn btn-primary pull-right" style="margin-left: 10px;">
-        <span ng-bind="i18n.__('Cancel')"></span>
-      </a>
+      <a href="/configuration/alerts/" class="btn btn-primary pull-left"><span ng-bind="i18n.__('Cancel')"></span></a>
     </div>
 
   </terrama2-box>
