--- a/webapp/views/login.html
+++ b/webapp/views/login.html
@@ -61,11 +61,11 @@
                 <form action="/login/process" method="post">
                     <div class="form-group has-feedback">
                         <input type="text" class="form-control" placeholder="{{ i18n.__('Username') }}" name="username">
-                        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                        <span class="fa fa-user form-control-feedback"></span>
                     </div>
                     <div class="form-group has-feedback">
                         <input type="password" class="form-control" placeholder="{{ i18n.__('Password') }}" name="password">
-                        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                        <span class="fa fa-key form-control-feedback"></span>
                     </div>
                     <div class="row">
                         <!--</li>-->
