--- a/webapp/views/configuration/project.html
+++ b/webapp/views/configuration/project.html
@@ -47,7 +47,7 @@
 
       <div class="box-footer">
         <button type="submit" class="btn btn-primary pull-right" ng-click="save(this);">{{ i18n.__("Save") }}</button>
-        <a href="/configuration/projects" class="btn btn-primary pull-left">{{ i18n.__('Cancel') }}</a>
+        <a href="{[ BASE_URL ]}configuration/projects" class="btn btn-primary pull-left">{{ i18n.__('Cancel') }}</a>
       </div>
 
       <div class="overlay" ng-show="isSubmiting">
