--- a/webapp/views/configuration/projects.html
+++ b/webapp/views/configuration/projects.html
@@ -3,7 +3,7 @@
 {% set tabActive = "projects" %}
 
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css">
+<link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css">
 {% endblock %}
 
 {% block title %} TerraMA² {{ i18n.__('Projects') }} {% endblock %}
