--- a/webapp/views/configuration/status.html
+++ b/webapp/views/configuration/status.html
@@ -24,7 +24,7 @@
 </script>
 
 <!-- Moment JS -->
-<script type="text/javascript" src="/bower_components/moment/moment.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/moment.js"></script>
 
 {% endblock %}
 
