--- a/webapp/views/administration/services.html
+++ b/webapp/views/administration/services.html
@@ -25,7 +25,7 @@
   };
 </script>
 <!-- Socket.io -->
-<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}socket.io/socket.io.js"></script>
 
 {% endblock %}
 
