--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -1,13 +1,13 @@
 {% set MENU_URLS = {} %}
 
-{# set MENU_URLS = {"projects": {name: 'Projects', url: "/configuration/projects", icon: "fa-sitemap"}} #}
-{% set MENU_URLS["data-provider"] = {name: 'Data Servers', url: "/configuration/providers", icon: "fa-database"} %}
-{% set MENU_URLS["dynamic-data"] = {name: 'Dynamic Data', url: "/configuration/dynamic/dataseries", icon: "fa-clock-o"} %}
-{% set MENU_URLS["static-data"] = {name: 'Static Data', url: "/configuration/static/dataseries", icon: "fa-folder"} %}
-{% set MENU_URLS["analysis"] = {name: 'Analysis', url: "/configuration/analysis", icon: "fa-search"} %}
-{% set MENU_URLS["views"] = {name: 'Views', url: "/configuration/views", icon: "fa-eye"} %}
-{% set MENU_URLS["alerts"] = {name: 'Alerts', url: "/configuration/alerts", icon: "fa-warning"} %}
-{% set MENU_URLS["status"] = {name: 'Status', url: "/configuration/status", icon: "fa-minus-circle"} %}
+{# set MENU_URLS = {"projects": {name: 'Projects', url: "configuration/projects", icon: "fa-sitemap"}} #}
+{% set MENU_URLS["data-provider"] = {name: 'Data Servers', url: "configuration/providers", icon: "fa-database"} %}
+{% set MENU_URLS["dynamic-data"] = {name: 'Dynamic Data', url: "configuration/dynamic/dataseries", icon: "fa-clock-o"} %}
+{% set MENU_URLS["static-data"] = {name: 'Static Data', url: "configuration/static/dataseries", icon: "fa-folder"} %}
+{% set MENU_URLS["analysis"] = {name: 'Analysis', url: "configuration/analysis", icon: "fa-search"} %}
+{% set MENU_URLS["views"] = {name: 'Views', url: "configuration/views", icon: "fa-eye"} %}
+{% set MENU_URLS["alerts"] = {name: 'Alerts', url: "configuration/alerts", icon: "fa-warning"} %}
+{% set MENU_URLS["status"] = {name: 'Status', url: "configuration/status", icon: "fa-minus-circle"} %}
 
 <!DOCTYPE html>
 <html  i18n-locale="{{ locale }}"
@@ -21,18 +21,18 @@
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="/bower_components/AdminLTE/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{[ BASE_URL ]}bower_components/AdminLTE/bootstrap/css/bootstrap.min.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{[ BASE_URL ]}bower_components/font-awesome/css/font-awesome.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="/bower_components/AdminLTE/dist/css/AdminLTE.min.css">
+  <link rel="stylesheet" href="{[ BASE_URL ]}bower_components/AdminLTE/dist/css/AdminLTE.min.css">
   <!-- Template Skin -->
-  <link rel="stylesheet" href="/bower_components/AdminLTE/dist/css/skins/skin-blue.min.css">
+  <link rel="stylesheet" href="{[ BASE_URL ]}bower_components/AdminLTE/dist/css/skins/skin-blue.min.css">
   <!-- i18n flags -->
-  <link rel="stylesheet" type="text/css" href="/bower_components/intl-tel-input/build/css/intlTelInput.css">
+  <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bower_components/intl-tel-input/build/css/intlTelInput.css">
   <!-- DataTables -->
-  <link rel="stylesheet" type="text/css" href="/bower_components/datatables/media/css/dataTables.bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/bower_components/datatables/media/css/jquery.dataTables.css">
+  <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bower_components/datatables/media/css/dataTables.bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bower_components/datatables/media/css/jquery.dataTables.css">
 
   {# Block for including TerraMA2 specific stylesheets #}
   <style>
@@ -62,7 +62,7 @@
   {% endblock %}
 
   <!-- TerraMA2 -->
-  <link rel="stylesheet" type="text/css" href="/dist/terrama2.min.css">
+  <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}dist/terrama2.min.css">
 
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -77,7 +77,7 @@
     <header class="main-header">
 
       <!-- Logo -->
-      <a href="/" class="logo">
+      <a href="{[ BASE_URL ]}" class="logo">
         <span class="logo-mini"><b></b>TMA²</span>
         <span class="logo-lg"><b>TerraMA²</b></span>
       </a>
@@ -96,7 +96,7 @@
             </li>
             <!-- User Account: style can be found in dropdown.less -->
             <li class="user user-menu">
-              <a aria-expanded="false" href="/logout">
+              <a aria-expanded="false" href="{[ BASE_URL ]}logout">
                 <i class="glyphicon glyphicon-log-out"></i>
                 <span ng-bind="i18n.__('Logout')"></span>
               </a>
@@ -116,7 +116,7 @@
         <!-- Sidebar user panel -->
         <div class="user-panel">
           <div class="pull-left image" style="min-height: 40px;">
-            <img src="/images/terrama2_logo.png" class="img-square" alt="User Image">
+            <img src="{[ BASE_URL ]}images/terrama2_logo.png" class="img-square" alt="User Image">
           </div>
 
           <div class="pull-left info">
@@ -132,14 +132,14 @@
               <li class="header" style="font-size:18px;font-weight: bold;">{[ activeProject.name ]}</li>
             {% endif %}
             <li class="treeview {% if (tabActive === 'projects') %} active {% endif %}">
-              <a href="/configuration/projects">
+              <a href="{[ BASE_URL ]}configuration/projects">
                 <i class="fa fa-sitemap"></i><span ng-bind="i18n.__('Projects')"></span>
               </a>
             </li>
             {% if (activeProject.name) %}
               {% for tab in MENU_URLS %}
               <li class="treeview {% if (tabActive === loop.key) %} active {% endif %}">
-                <a href="{[ tab.url ]}" class="{[ tab.css ]}">
+                <a href="{[ BASE_URL + tab.url ]}" class="{[ tab.css ]}">
                   <i class="fa {[ tab.icon ]}"></i><span ng-bind="i18n.__('{[ tab.name ]}')"></span>
                 </a>
               </li>
@@ -156,12 +156,12 @@
               </a>
               <ul class="treeview-menu" style="display: {% if (tabActive === 'services' || tabActive === 'users') %} block; {% else %} none;{% endif %}">
                 <li class="treeview {% if (tabActive === 'services') %} active {% endif %}">
-                  <a href="/administration/services">
+                  <a href="{[ BASE_URL ]}administration/services">
                     <i class="fa fa-cog"></i> <span ng-bind="i18n.__('Services')"></span>
                   </a>
                 </li>
                 <li class="treeview {% if (tabActive === 'users') %} active {% endif %}">
-                  <a href="/administration/users">
+                  <a href="{[ BASE_URL ]}administration/users">
                     <i class="fa fa-users"></i> <span ng-bind="i18n.__('Users')"></span>
                   </a>
                 </li>
@@ -169,7 +169,7 @@
             </li>
             {% endif %}
             <li class="treeview {% if (tabActive === 'profile') %} active {% endif %}">
-              <a href="/profile/">
+              <a href="{[ BASE_URL ]}profile/">
                 <i class="fa fa-pencil-square-o "></i><span ng-bind="i18n.__('Profile')"></span>
               </a>
             </li>
@@ -205,13 +205,13 @@
   </div>
   <!-- ./wrapper -->
 
-  <script src="/bower_components/AdminLTE/plugins/jQuery/jQuery-2.1.4.min.js"></script>
-  <script src="/bower_components/AdminLTE/bootstrap/js/bootstrap.min.js"></script>
-  <script src="/bower_components/AdminLTE/plugins/fastclick/fastclick.min.js"></script>
-  <script src="/bower_components/AdminLTE/dist/js/app.min.js"></script>
+  <script src="{[ BASE_URL ]}bower_components/AdminLTE/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+  <script src="{[ BASE_URL ]}bower_components/AdminLTE/bootstrap/js/bootstrap.min.js"></script>
+  <script src="{[ BASE_URL ]}bower_components/AdminLTE/plugins/fastclick/fastclick.min.js"></script>
+  <script src="{[ BASE_URL ]}bower_components/AdminLTE/dist/js/app.min.js"></script>
 
   <!-- i18n flags -->
-  <script type="text/javascript" src="/bower_components/intl-tel-input/build/js/intlTelInput.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/intl-tel-input/build/js/intlTelInput.js"></script>
 
   <script type="text/javascript">
     $(document).ready(function(){
@@ -228,7 +228,7 @@
         // var inverse = !collapsed;
         $.ajax({
           method: 'POST',
-          url: '/userDefaults/',
+          url: '{[ BASE_URL ]}userDefaults/',
           data: {
             collapsed: collapsed
           }
@@ -239,20 +239,24 @@
     });
   </script>
   <!-- jQuery DataTables -->
-  <script src="/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
+  <script src="{[ BASE_URL ]}bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
   <!-- Angular JS -->
-  <script src="/bower_components/angular/angular.min.js"></script>
+  <script src="{[ BASE_URL ]}bower_components/angular/angular.min.js"></script>
   <!-- Internationalization -->
-  <script src="/bower_components/i18n-node-angular/i18n-node-angular.js"></script>
+  <script src="{[ BASE_URL ]}bower_components/i18n-node-angular/i18n-node-angular.js"></script>
   <!-- Socket.io -->
-  <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}socket.io/socket.io.js"></script>
 
   {# Block for handling TerraMA2 javascripts include #}
   {% block javascripts %}
 
   {% endblock %}
 
-  <script type="text/javascript" src="/dist/terrama2-webapp.min.js"></script>
+  <script type="text/javascript">
+    BASE_URL = "{[ BASE_URL ]}";
+  </script>
+
+  <script type="text/javascript" src="{[ BASE_URL ]}dist/terrama2-webapp.min.js"></script>
 
 </body>
 </html>
