--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -6,18 +6,18 @@
 
 {% block styles %}
 
-<link rel="stylesheet" href="/bower_components/angular-ui-select/dist/select.min.css" />
+<link rel="stylesheet" href="{[ BASE_URL ]}bower_components/angular-ui-select/dist/select.min.css" />
 
 {% endblock %}
 
 {% block javascripts %}
 
 <!-- Moment Datetime JS -->
-<script type="text/javascript" src="/bower_components/moment/moment.js"></script>
-<script type="text/javascript" src="/bower_components/moment/locale/pt-br.js"></script>
-<script type="text/javascript" src="/bower_components/moment/locale/es.js"></script>
-<script type="text/javascript" src="/bower_components/moment/locale/fr.js"></script>
-<script src="/bower_components/angular-ui-select/dist/select.min.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/moment.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/locale/pt-br.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/locale/es.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/locale/fr.js"></script>
+<script src="{[ BASE_URL ]}bower_components/angular-ui-select/dist/select.min.js"></script>
 
 <script>
   var configuration = {
@@ -61,11 +61,11 @@
                         ng-model="ctrl.alert.service_instance_id"
                         required>
                   <ui-select-match>
-                    <img ng-src="/images/services/alert/alert_service.png" style="height: 20px; margin-top: -7px;"/>
+                    <img ng-src="{[ BASE_URL ]}images/services/alert/alert_service.png" style="height: 20px; margin-top: -7px;"/>
                     <span ng-bind="$select.selected.name"></span>
                   </ui-select-match>
                   <ui-select-choices repeat="instance.id as instance in (ctrl.filteredServices | filter: {'name': $select.search}) track by instance.id">
-                    <img ng-src="/images/services/alert/alert_service.png" style="height: 20px;"/>
+                    <img ng-src="{[ BASE_URL ]}images/services/alert/alert_service.png" style="height: 20px;"/>
                     <span ng-bind="instance.name"></span>
                   </ui-select-choices>
                 </ui-select>
@@ -347,7 +347,7 @@
           <li><a href="javascript::void();" ng-disabled="ctrl.isNotValid" data-ng-click="!ctrl.isNotValid && ctrl.save(false);" ng-bind="i18n.__('Save')"></a></li>
         </ul>
       </div>
-      <a href="/configuration/alerts/" class="btn btn-primary pull-left"><span ng-bind="i18n.__('Cancel')"></span></a>
+      <a href="{[ BASE_URL ]}configuration/alerts/" class="btn btn-primary pull-left"><span ng-bind="i18n.__('Cancel')"></span></a>
     </div>
 
   </terrama2-box>
