--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -7,16 +7,16 @@
 {% block ngApp %}ng-app="terrama2.dataseries.registration"{% endblock %}
 
 {% block styles %}
-  <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css">
-  <link rel="stylesheet" type="text/css" href="/bower_components/angular-wizard/dist/angular-wizard.min.css">
-  <link href="/bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
-  <link rel="stylesheet" href="/bower_components/angular-ui-select/dist/select.min.css" />
+  <link rel="stylesheet" href="{[ BASE_URL ]}bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css">
+  <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bower_components/angular-wizard/dist/angular-wizard.min.css">
+  <link href="{[ BASE_URL ]}bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
+  <link rel="stylesheet" href="{[ BASE_URL ]}bower_components/angular-ui-select/dist/select.min.css" />
 
   <!-- Angular tree control -->
   <!-- link for CSS when using the tree as a Dom element -->
-  <link rel="stylesheet" type="text/css" href="/bower_components/angular-tree-control/css/tree-control.css">
+  <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bower_components/angular-tree-control/css/tree-control.css">
   <!-- link for CSS when using the tree as an attribute -->
-  <link rel="stylesheet" type="text/css" href="/bower_components/angular-tree-control/css/tree-control-attribute.css">
+  <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bower_components/angular-tree-control/css/tree-control-attribute.css">
 
   <style>
     .terrama2-tr {
@@ -77,31 +77,31 @@
 
 {% block javascripts %}
   <!-- Angular -->
-  <script type="text/javascript" src="/bower_components/angular-wizard/dist/angular-wizard.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-wizard/dist/angular-wizard.js"></script>
 
   <!-- Angular tree control -->
-  <script type="text/javascript" src="/bower_components/angular-tree-control/angular-tree-control.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-tree-control/angular-tree-control.js"></script>
 
   <!-- Angular Schema Form dependencies -->
-  <script type="text/javascript" src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
-  <script type="text/javascript" src="/bower_components/tv4/tv4.js"></script>
-  <script type="text/javascript" src="/bower_components/objectpath/lib/ObjectPath.js"></script>
-  <script type="text/javascript" src="/bower_components/angular-schema-form/dist/schema-form.js"></script>
-  <script type="text/javascript" src="/bower_components/angular-schema-form/dist/bootstrap-decorator.min.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/tv4/tv4.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/objectpath/lib/ObjectPath.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-schema-form/dist/schema-form.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-schema-form/dist/bootstrap-decorator.min.js"></script>
 
-  <script type="text/javascript" src="/bower_components/moment/moment.js"></script>
-  <script type="text/javascript" src="/bower_components/moment/locale/pt-br.js"></script>
-  <script type="text/javascript" src="/bower_components/moment/locale/es.js"></script>
-  <script type="text/javascript" src="/bower_components/moment/locale/fr.js"></script>
-  <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-  <script type="text/javascript" src="/bower_components/angular-eonasdan-datetimepicker/dist/angular-eonasdan-datetimepicker.min.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/moment.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/locale/pt-br.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/locale/es.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/moment/locale/fr.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-eonasdan-datetimepicker/dist/angular-eonasdan-datetimepicker.min.js"></script>
   <!-- XEditable  -->
-  <script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+  <script src="{[ BASE_URL ]}bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 
   <!-- Angular ui router -->
-  <script type="text/javascript" src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   
-  <script src="/bower_components/angular-ui-select/dist/select.min.js"></script>
+  <script src="{[ BASE_URL ]}bower_components/angular-ui-select/dist/select.min.js"></script>
 
   <script type="text/javascript">
     var params = {
