--- a/webapp/views/configuration/provider.html
+++ b/webapp/views/configuration/provider.html
@@ -14,11 +14,11 @@
 {% endblock %}
 
 {% block javascripts %}
-<script type="text/javascript" src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
-<script type="text/javascript" src="/bower_components/tv4/tv4.js"></script>
-<script type="text/javascript" src="/bower_components/objectpath/lib/ObjectPath.js"></script>
-<script type="text/javascript" src="/bower_components/angular-schema-form/dist/schema-form.js"></script>
-<script type="text/javascript" src="/bower_components/angular-schema-form/dist/bootstrap-decorator.min.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}bower_components/tv4/tv4.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}bower_components/objectpath/lib/ObjectPath.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-schema-form/dist/schema-form.js"></script>
+<script type="text/javascript" src="{[ BASE_URL ]}bower_components/angular-schema-form/dist/bootstrap-decorator.min.js"></script>
 
 <script>
   // Setting it to define data provider: static or dynamic
